<resources>
    <string name="app_name">Recipes Book</string>
    <string name="Hello">Welcome to my Recipe Book</string>
    <string name="avatar_description">Author avatar</string>
    <string name="options_description">Options button</string>
    <string name="content">Recipe description</string>
    <string name="like_description">Like button</string>
    <string name="share_description">Share button</string>
    <string name="view_description">View icon</string>
    <string name="author">Author</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="menu_button">Menu</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_confirmation">Enter confirmation</string>
    <string name="undo_editing">Undo editing</string>
    <string name="edit_image">Edit image</string>
    <string name="error_empty_content">Error empty content</string>
    <string name="error_empty_title">Error empty title</string>
    <string name="error_empty_steps">Error empty steps</string>
    <string name="number_of_likes">Number of likes</string>
    <string name="number_of_share">Number of shares</string>
    <string name="number_of_views">Number of views</string>
    <string name="chooser_share_recipe">Recipe to share</string>
    <string name="description_recipe_save">Recipe save</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="category_European">European</string>
    <string name="category_Asian">Asian</string>
    <string name="category_PanAsian">Pan-Asian</string>
    <string name="category_Oriental">Oriental</string>
    <string name="category_American">American</string>
    <string name="category_Russian">Russian</string>
    <string name="category_Mediterranean">Mediterranean</string>
    <string name="step_word_text_description">Step word text description</string>
    <string name="step_word">Step</string>
    <string name="step_number_text_description">Step number</string>
    <string name="step_text_description">Step text description</string>
    <string name="delete_step_text_description">Delete step text description</string>
    <string name="step_image_description">Step image description</string>
    <string name="new_recipe_image_description">New recipe image description</string>
    <string name="recipe_add_recipe_image">recipe_add_recipe_image</string>
    <string name="recipe_title">Recipe title</string>
    <string name="categories_word_text_description">categories_word_text_description</string>
    <string name="categories_word">Categories</string>
    <string name="add_category_button_text_description">add_category_button_text_description</string>
    <string name="recipe_image_description">recipe_image_description</string>
    <string name="favourite_button_recipe_description">favourite_button_recipe_description</string>
    <string name="recipe_name_text_description">recipe_name_text_description</string>
    <string name="steps_word">Steps</string>
    <string name="new_recipe_steps_word_description">new_recipe_steps_word_description</string>
    <string name="recipe_step">Recipe step</string>
    <string name="new_recipe_add_step_image_description" translatable="false">new_recipe_add_step_image_description</string>
    <string name="new_recipe_add_step_description">new_recipe_add_step_description</string>
    <string name="new_recipe_save_button_description">new_recipe_save_button_description</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="action_bar_options_button">action_bar_options_button</string>
    <string name="action_bar_favorite_recipes_button">Favorites</string>
    <string name="action_bar_all_recipes_button">All recipes</string>
    <string name="options_text_description">options_text_description</string>
    <string name="recipe_card_image_text_description">recipe_card_image_text_description</string>
    <string name="recipe_description">Recipe description</string>
    <string name="error_empty_description">Error empty description</string>
    <string name="empty_state_word_no_recipe">No recipes yet</string>
    <string name="empty_state_description_word_no_recipe">It\'s toast again until you add something new.</string>
    <string name="empty_state_word_no_favorites">No favorites</string>
    <string name="empty_state_description_word_no_favorites">It\'s time to choose your favorite recipes.</string>
    <string name="recipe_published">Published</string>
    <string name="category_filter">Сategory filter</string>
    <string name="filter_all">Filter all</string>
    <string name="reset_filters_button">Reset filters button</string>
    <string name="apply_filters_button">Apply filters button</string>
    <string name="action_bar_search_button">Action Bar search button</string>
    <string name="action_bar_filter_button">Action bar filter button</string>
    <string name="search_filter_hint">Search filter hint</string>
</resources>