<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/stepWordTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/step_word_text_description"
        android:text="@string/step_word"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/stepNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/step_number_text_description"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/stepWordTextView"
        app:layout_constraintStart_toEndOf="@id/stepWordTextView"
        app:layout_constraintTop_toTopOf="@id/stepWordTextView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/stepTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/step_text_description"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/deleteStepMaterialButton"
        app:layout_constraintStart_toStartOf="@id/stepWordTextView"
        app:layout_constraintTop_toBottomOf="@id/stepWordTextView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Шаг приготовления" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteStepMaterialButton"
        style="@style/Widget.AppTheme.DeleteStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/stepWordTextView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/stepImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/step_image_description"
        android:maxHeight="@dimen/max_recipe_image_height"
        android:minHeight="@dimen/min_recipe_image_height"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stepTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>