<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/recipeCardImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/recipe_card_image_text_description"
        android:maxHeight="@dimen/max_recipe_image_height"
        android:minHeight="@dimen/min_recipe_image_height"
        android:padding="@dimen/common_spacing"
        android:scaleType="center"
        android:src="@drawable/no_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/recipeAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/author"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/recipePublished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/recipe_published"
        app:layout_constraintStart_toStartOf="@id/recipeAuthor"
        app:layout_constraintTop_toBottomOf="@id/recipeAuthor" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/favoriteRecipeCardMaterialButton"
        style="@style/Widget.AppTheme.FavouriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:checkable="true"
        android:contentDescription="@string/favourite_button_recipe_description"
        app:layout_constraintBottom_toBottomOf="@+id/recipeCardImageView"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/recipeLikeButton"
        style="@style/AppCheckableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:text="@string/number_of_likes"
        android:textAppearance="@style/TextStyle"
        android:textColor="@color/colorDarkGrey"
        app:icon="@drawable/ic_like_24dp"
        app:iconTint="@color/selector_like_color"
        app:layout_constraintBottom_toBottomOf="@+id/recipeCardImageView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleRecipeCardTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:paddingStart="@dimen/common_spacing"
        android:paddingEnd="@dimen/common_spacing"
        android:textAlignment="center"
        android:textSize="@dimen/title_recipe_card_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recipeCardImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeCardImageView"
        tools:text="Название рецепта" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recipeCardOptionsMaterialButton"
        style="@style/Widget.AppTheme.OptionsButton"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/options_text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierRecipe" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierRecipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/common_spacing"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="titleRecipeCardTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>